cmake_minimum_required(VERSION 3.15)
project(MarkdownParser CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    add_compile_options("/utf-8")
#    if (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_LIST_DIR})
#        set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
#        set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
#    endif()
endif()
add_subdirectory(src)
option(BUILD_TEST "build test, require GTest" OFF)
if (BUILD_TEST)
    add_subdirectory(test)
endif ()